--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
 @import '~antd/dist/antd.css';
 
 #root {
-    min-height: 100%;
+  min-height: 100%;
+}
+
+.message-root .ant-message-custom-content {
+  display: flex;
+  align-items: center;
 }
